# Adapt

./: .gitignore  .importlinter  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml  docs.yml  pypi-release.yml  virus.yml
docs/: USAGE.md  conf.py  contributing.md  contributors_guide.md  dashboard_reference.md  installation.md  readme.md
docs/api/: client.rst
docs/api/internal/: configuration.rst  contracts.rst  execution.rst  index.rst  persistence.rst  runtime.rst  utils.rst  visualization.rst
docs/api/modules/: acquisition.rst  analysis.rst  detection.rst  index.rst  ingest.rst  projection.rst  tracking.rst
src/adapt/: __init__.py  cli.py
src/adapt/api/: __init__.py  client.py  domain.py  selection.py
src/adapt/configuration/: defaults.yaml
src/adapt/contracts/: grid.py  (+10 more)
tests/: conftest.py  test_architecture.py
tests/api/: test_domain.py  test_filter_spec.py  test_repository_client.py
tests/cli/: test_config_command.py  test_run_nexrad_module_flags.py
tests/configuration/: test_assemble_default_config.py  test_cli_config.py  test_cli_precedence.py  test_config_resolution.py  test_full_config_roundtrip.py  test_init_base_dir_defaults.py  test_initialization_run_id.py  test_internal_module_params.py  test_module_params_routing.py  test_module_resolver.py  test_rerun_cleanup.py  test_setup_directories.py  test_setup_directories_extended.py  test_source_selector.py  test_user_passthrough.py  test_userconfig_normalization.py  test_yaml_writer.py
tests/consumers/: test_live_importable.py
tests/execution/: test_module_registry.py  test_projection_node_scan_history.py  test_resolve_enabled_modules.py
tests/graph/: test_graph.py
tests/gui/: test_centroid_to_km.py  test_dashboard_constants.py  test_dashboard_none_guards.py  test_dashboard_rendering.py  test_proj_path_config.py
tests/integration/: test_cell_volume_stats_integration.py
tests/modules/: conftest.py
tests/persistence/: __init__.py  test_data_repository.py  test_module_output_writer.py  test_radar_catalog_schema.py  test_registry_radar_location.py  test_repository_registers_radar_location.py  test_track_store.py
tests/runtime/: conftest.py  test_grid3d_registration.py  test_orchestrator_source.py  test_processor_core.py  test_processor_enrich.py  test_processor_failures.py  test_processor_provides_grid3d.py  test_processor_rolling_window.py  test_sources.py
tests/stories/: test_scientist_stories.py
tests/unit/: test_base_module_build_config.py  test_base_module_declarations.py  test_base_module_default_params.py  test_base_module_output_table.py  test_declared_dependencies.py  test_edge_cases.py  test_node_required_history.py  test_utils_time.py
tests/validation/: __init__.py  test_check_functions.py  test_contracts.py  test_scan_history_contract.py
tests/visualization/: test_plotter_error_paths.py
(+136 files in other folders)
