[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "arm-adapt"
dynamic = ["version"]
description = "Real-Time Analysis, Tracking, and Adaptive Radar Sampling of Convective Storms"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE*"]
authors = [
    {name = "Bhupendra A. Raut", email = "braut@anl.gov"},
]
keywords = ["Radar", "NEXRAD", "tracking", "cell-detection", "adaptive-sampling", "Thunderstorm", "Nowcasting", "TITAN", "Py-ART", "ARM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy",
    "xarray",
    "pandas",
    "scipy",
    "scikit-image",
    "matplotlib",
    "networkx",
    "h5py",
    "netCDF4",
    "tqdm",
    "pydantic>=2.0",
    "arm_pyart",
    "opencv-python",
    "nexradaws",
    "cartopy>=0.21",
    "contextily",
    "pyproj",
    "pyarrow",
]

[project.urls]
Homepage = "https://arm-doe.github.io/Adapt/"
Documentation = "https://arm-doe.github.io/Adapt/"
Repository = "https://github.com/ARM-DOE/Adapt.git"
Issues = "https://github.com/ARM-DOE/Adapt/issues"

[project.scripts]
adapt = "adapt.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "import-linter>=2.0",
]
docs = [
    "sphinx>=7.0",
    "pydata-sphinx-theme>=0.15",
    "sphinx-autodoc-typehints",
    "myst-parser>=2.0",
]

[tool.setuptools]
include-package-data = true
platforms = ["Linux", "Mac OS-X", "Unix", "Windows"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.package-data]
"adapt.data" = ["user_config.py"]
"adapt.schemas" = ["*.sql"]
"adapt.config" = ["*.yaml"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
minversion = "7.0"
markers = [
    "unit: fast unit tests (no IO)",
    "pipeline: pipeline tests with mocks",
    "integration: tests requiring real or on-disk data",
    "slow: long-running tests",
]

[tool.coverage.run]
branch = true
source = ["src/adapt"]

[tool.coverage.report]
ignore_errors = true
precision = 2

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # syntax / style errors
    "F",   # logic bugs (undefined vars, etc.)
    "I",   # import hygiene
    "B",   # bug patterns
    "UP",  # modern Python upgrades
    "SIM", # simplifications (often removes subtle mistakes)
]

[tool.ruff.lint.isort]
known-first-party = ["adapt"]
